ecj linting, forbidden, etc